# hicon

./: .pre-commit-config.yaml  MANIFEST.in  README.md  requirements.txt  setup.py
hicon/: __init__.py  main.py
optionals/: pyproject.toml
tests/: tetst_main.py
